# agentvisor

./: .gitignore  README.md  TODOS.md  pyproject.toml  sprint0-findings.md
.github/workflows/: ci.yml  publish.yml
agentvisor/: cli.py  config.py  proxy.py  registry.py  service.py  vault.py
tests/: conftest.py  test_config.py  test_proxy.py  test_registry.py  test_service.py  test_uninstall.py  test_vault.py
