[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentvisor"
version = "0.1.0"
description = "~/.ssh/agent for AI agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "keyring>=24.0",
    "cryptography>=42.0",
    "starlette>=0.37",
    "httpx>=0.27",
    "uvicorn>=0.29",
    "click>=8.1",
]

[project.scripts]
agentvisor = "agentvisor.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["agentvisor"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "anyio>=4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
